bases/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.5"
            limits:
              memory: "512Mi"
              cpu: "0.75"
          ports:
            - containerPort: 9117
              name: tcp-server
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          hostPath:
            path: /media/deadpool/docker/media-server/jackett
            type: DirectoryOrCreate
