bases/jackett/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jackett.reynn.net`)
      kind: Rule
      services:
        - name: jackett
          port: 9117
  tls:
    secretName: reynn-net-cert
    options:
      name: recommended-tls-opts
